# MyPracticalTools

./: LICENSE  LICENSE_SCOPE.md  LICENSE_SCOPE.zh-CN.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml
dashboard/: README.md  README.zh-CN.md  pyproject.toml
dashboard/examples/: aca-rl-matrix.json
dashboard/src/practical_dashboard/: __init__.py  cli.py  config.py  progress.py
dashboard/tests/: test_dashboard.py
datasets/ACA_small_v0.2/: audit_report.json  blind_gate_metadata.jsonl.zst  manifest.json
datasets/ACA_small_v0.2/test/: problems.jsonl.zst  submissions.jsonl.zst
docs/: dataset-and-datapackage-design.md  dataset-and-datapackage-design.zh-CN.md
watchdogDownloader/: .gitignore  README.md  README.zh-CN.md  wdd
watchdogDownloader/examples/: ccplus_1x.manifest.tsv
watchdogDownloader/tests/: test_wdd.py
whn_skill/: whn_skill.md  whn_skill.zh-CN.md
