[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "practical-run-dashboard"
version = "0.1.0"
description = "A reusable Rich TUI for checkpointed training and evaluation pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.9"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
practical-dashboard = "practical_dashboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
